<resources>
    <string name="app_name">TechMarket</string>

    <string name="txt_search_product">Search Product</string>
    <string name="txt_find_your_product">Find your Product</string>

    <string name="txt_apple">Apple</string>
    <string name="txt_samsung">Samsung</string>
    <string name="txt_huawei">Huawei</string>
    <string name="txt_oppo">OPPO</string>
    <string name="txt_details">Details</string>
    <string name="txt_add_to_cart">Add to cart</string>

    <string name="txt_price">$%d</string>
    <string name="txt_total_price">$%.2f</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="txt_home">Home</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_wish_list">Wish List</string>
    <string name="text_welcome">Welcome</string>
    <string name="txt_your_wish_list">Your Wish List</string>
    <string name="txt_quantity_in_cart">Quantity in cart</string>
    <string name="txt_your_cart">Your Cart</string>
    <string name="txt_total_of_purchase">Total of purchase:</string>
</resources>